--- a/index.html
+++ b/index.html
@@ -13,13 +13,34 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.3/css/bootstrap.min.css"
+      integrity="sha512-jnSuA4Ss2PkkikSOLtYs8BlYIeeIK1h99ty4YfvRPAlzr377vr3CXDb7sb7eEEBYjDtcYj+AjBH3FLv5uSJuXg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/flat-icons@1.0.0/creative.min.css"
+    />
+    <link
+      href="https://cdn.jsdelivr.net/npm/@flaticon/flaticon-uicons/css/all/all.css"
+      rel="stylesheet"
+    />
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.3/js/bootstrap.min.js"
+      integrity="sha512-ykZ1QQr0Jy/4ZkvKuqWn4iF3lqPZyij9iRv6sGqLRdTPkY69YX6+7wvVGmsdBbiIfN/8OdsI7HABjvEok6ZopQ=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
     <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="responsive.css" />
+    <link rel="stylesheet" href="components.css" />
   </head>
 
   <body>
     <!-- Navbar header section -->
-    <header class="header">
+    <!-- <header class="header">
       <nav class="navbar">
         <div class="logo">
           <h2 class="logo-heading">Emrit Diyal</h2>
@@ -48,27 +69,52 @@
           </ul>
         </div>
       </nav>
-    </header>
+    </header> -->
 
     <!-- Main hero banner -->
     <section id="home" class="hero">
       <div class="intro">
-        <div class="headings">
+        <div id="heading-content" class="headings">
           <h3 class="greet-heading">Hello, I'm</h3>
-          <h1 class="my-heading">Emrit Diyal</h1>
-          <h4 class="sub-heading">
-            A Software Engineer with 3 years of Experience.
-          </h4>
+          <h1 class="my-heading">Tarique Solomon</h1>
+          <h4 id="type-text"></h4>
         </div>
         <div class="intro-buttons">
           <button class="btn common-btn">Hire Me</button>
           <button class="btn ghost-btn">Get Resume</button>
         </div>
+
+        <div class="social-links">
+          <div class="footer-menu">
+            <ul class="footer-menu-list">
+              <li class="footer-list-items">
+                <a class="footer-links" href="#">
+                  <i class="fab fa-facebook-f"></i>
+                </a>
+              </li>
+              <li class="footer-list-items">
+                <a class="footer-links" href="#">
+                  <i class="fab fa-twitter"></i>
+                </a>
+              </li>
+              <li class="footer-list-items">
+                <a class="footer-links" href="#">
+                  <i class="fab fa-instagram"></i>
+                </a>
+              </li>
+              <li class="footer-list-items">
+                <a class="footer-links" href="#">
+                  <i class="fab fa-linkedin-in"></i>
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
       </div>
     </section>
 
     <!-- Portfolio Section -->
-    <section class="portfolio" id="portfolio">
+    <!-- <section class="portfolio" id="portfolio">
       <div class="portfolio-heading">
         <h1 class="my-heading text-center">Featured Portfolio</h1>
       </div>
@@ -144,182 +190,56 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
 
     <!-- About Section -->
     <section id="about" class="about">
       <div class="about-text">
         <h1 class="my-heading">About Me</h1>
         <p class="lead-para">
-          GeeksforGeeks is a leading platform that provides computer science
-          resources and coding challenges for programmers and technology
-          enthusiasts, along with interview and exam preparations for upcoming
-          aspirants. With a strong emphasis on enhancing coding skills and
-          knowledge, it has become a trusted destination for over 12 million
-          plus registered users worldwide. The platform offers a vast collection
-          of tutorials, practice problems, interview tutorials, articles, and
-          courses, covering various domains of computer science.
-        </p>
-        <p>
-          Our exceptional mentors hailing from top colleges & organizations have
-          the ability to guide you on a journey from the humble beginnings of
-          coding to the pinnacle of expertise. Under their guidance watch your
-          skills flourish as we lay the foundation and help you conquer the
-          world of coding.
+          A student of Dextor's Labratory, I'm a ... software engineer? software
+          developer? I'm someone who writes code to solve everyday tasks. I'm
+          passionate about this modern day magic, that allows me to create tools
+          to solve issues I (or you) may face in your day to day. A student of
+          the game, I'm always trying to learn new technologies (even tho I'm
+          always behind)
         </p>
       </div>
       <div class="about-image">
-        <img src="./Images/heroImg2.avif" alt="About Image" />
+        <img src="./assets/6463428.jpg" alt="About Image" />
       </div>
     </section>
+
+    <section class="full-row" id="services">
+      <div class="services-heading">
+        <h1 class="my-heading text-center">Skills</h1>
+      </div>
+      <div class="services-content">
+        <!-- <div id="test"></div> -->
+        <div class="container-fluid">
+          <div class="row row-cols-1" id="skills-container"></div>
+        </div>
+      </div>
+    </section>
+    <section class="delimiter"></section>
 
     <!-- Services Section -->
     <section class="services" id="services">
       <div class="services-heading">
-        <h1 class="my-heading text-center">My Services</h1>
+        <h1 class="my-heading text-center">Projects</h1>
       </div>
       <div class="services-content">
-        <div class="my-row">
-          <div class="my-col">
-            <div class="my-card">
-              <div class="icon">
-                <i class="fas fa-paint-brush"></i>
-              </div>
-              <h3 class="greet-heading blue-text">Web Design</h3>
-              <p class="small-para">
-                Web development refers to the creating, building, and
-                maintaining of websites. It includes aspects such as web design,
-                web publishing, web programming, and database management. It is
-                the creation of an application that works over the internet i.e.
-                websites.
-              </p>
-              <p class="small-para">
-                Web development refers to the creating, building, and
-                maintaining of websites. It includes aspects such as web design,
-                web publishing, web programming, and database management. It is
-                the creation of an application that works over the internet i.e.
-                websites.
-              </p>
-            </div>
-          </div>
-          <div class="my-col">
-            <div class="my-card">
-              <div class="icon">
-                <i class="fa-solid fa-code"></i>
-              </div>
-              <h3 class="greet-heading blue-text">Web Development</h3>
-              <p class="small-para">
-                Web development refers to the creating, building, and
-                maintaining of websites. It includes aspects such as web design,
-                web publishing, web programming, and database management. It is
-                the creation of an application that works over the internet i.e.
-                websites.
-              </p>
-              <p class="small-para">
-                Web development refers to the creating, building, and
-                maintaining of websites. It includes aspects such as web design,
-                web publishing, web programming, and database management. It is
-                the creation of an application that works over the internet i.e.
-                websites.
-              </p>
-            </div>
-          </div>
-          <div class="my-col">
-            <div class="my-card">
-              <div class="icon">
-                <i class="fas fa-chart-line"></i>
-              </div>
-              <h3 class="greet-heading blue-text">SEO</h3>
-              <p class="small-para">
-                Web development refers to the creating, building, and
-                maintaining of websites. It includes aspects such as web design,
-                web publishing, web programming, and database management. It is
-                the creation of an application that works over the internet i.e.
-                websites.
-              </p>
-              <p class="small-para">
-                Web development refers to the creating, building, and
-                maintaining of websites. It includes aspects such as web design,
-                web publishing, web programming, and database management. It is
-                the creation of an application that works over the internet i.e.
-                websites.
-              </p>
-            </div>
-          </div>
-        </div>
-        <div class="my-row">
-          <div class="my-col">
-            <div class="my-card">
-              <div class="icon">
-                <i class="fas fa-quote-left"></i>
-              </div>
-              <h3 class="greet-heading blue-text">Content Writting</h3>
-              <p class="small-para">
-                Web development refers to the creating, building, and
-                maintaining of websites. It includes aspects such as web design,
-                web publishing, web programming, and database management. It is
-                the creation of an application that works over the internet i.e.
-                websites.
-              </p>
-              <p class="small-para">
-                Web development refers to the creating, building, and
-                maintaining of websites. It includes aspects such as web design,
-                web publishing, web programming, and database management. It is
-                the creation of an application that works over the internet i.e.
-                websites.
-              </p>
-            </div>
-          </div>
-          <div class="my-col">
-            <div class="my-card">
-              <div class="icon">
-                <i class="fab fa-wordpress-simple"></i>
-              </div>
-              <h3 class="greet-heading blue-text">WordPress Dev</h3>
-              <p class="small-para">
-                Web development refers to the creating, building, and
-                maintaining of websites. It includes aspects such as web design,
-                web publishing, web programming, and database management. It is
-                the creation of an application that works over the internet i.e.
-                websites.
-              </p>
-              <p class="small-para">
-                Web development refers to the creating, building, and
-                maintaining of websites. It includes aspects such as web design,
-                web publishing, web programming, and database management. It is
-                the creation of an application that works over the internet i.e.
-                websites.
-              </p>
-            </div>
-          </div>
-          <div class="my-col">
-            <div class="my-card">
-              <div class="icon">
-                <i class="fas fa-video"></i>
-              </div>
-              <h3 class="greet-heading blue-text">Video Editing</h3>
-              <p class="small-para">
-                Web development refers to the creating, building, and
-                maintaining of websites. It includes aspects such as web design,
-                web publishing, web programming, and database management. It is
-                the creation of an application that works over the internet i.e.
-                websites.
-              </p>
-              <p class="small-para">
-                Web development refers to the creating, building, and
-                maintaining of websites. It includes aspects such as web design,
-                web publishing, web programming, and database management. It is
-                the creation of an application that works over the internet i.e.
-                websites.
-              </p>
-            </div>
-          </div>
+        <div class="container-fluid">
+          <div
+            class="row row-cols-1 row-cols-md-2 row-cols-lg-3"
+            id="projects-container"
+          ></div>
         </div>
       </div>
     </section>
 
     <!-- Contact me section -->
-    <section class="contact" id="contact">
+    <section class="contact" id="contact" style="display: none">
       <div class="contact-heading">
         <h1 class="my-heading text-center">Contact Me</h1>
       </div>
@@ -346,38 +266,16 @@
             />
           </form>
         </div>
-        <div class="contact-details">
-          <h1 class="greet-heading">My Contact Details</h1>
-          <div class="details">
-            <h5 class="contact-heading">EMAIL</h5>
-            <p class="contact-text">example@gmail.com</p>
-          </div>
-          <div class="details">
-            <h5 class="contact-heading">PHONE</h5>
-            <p class="contact-text">+91 0123456789</p>
-          </div>
-          <div class="details">
-            <h5 class="contact-heading">FAX</h5>
-            <p class="contact-text">+91 0123456789</p>
-          </div>
-          <div class="details">
-            <h5 class="contact-heading">ADDRESS</h5>
-            <p class="contact-text">San Francisco, CA</p>
-            <p>4th Floor8 Lower</p>
-            <p>San Francisco street, M1 50F</p>
-          </div>
-        </div>
       </div>
     </section>
 
     <!-- Footer section -->
     <footer class="footer">
       <div class="footer-content text-center">
-        <h4>
-          Copyright © 2023 All rights reserved | This portfolio website template
-          is created by GeeksforGeeks.
-        </h4>
-        <div class="social-links">
+        <h4>Copyright © 2025 All rights reserved</h4>
+        <h7>based on template created by GeeksforGeeks.</h7>
+        <h6>icons created by Freepik - Flaticon</h6>
+        <!-- <div class="social-links">
           <div class="footer-menu">
             <ul class="footer-menu-list">
               <li class="footer-list-items">
@@ -402,10 +300,10 @@
               </li>
             </ul>
           </div>
-        </div>
+        </div> -->
       </div>
     </footer>
-
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/js/all.min.js"
       integrity="sha512-uKQ39gEGiyUJl4AI6L+ekBdGKpGw4xJ55+xyJG7YFlJokPNYegn9KwQ3P8A7aFQAUtUsAQHep+d/lrGqrbPIDQ=="
@@ -413,5 +311,104 @@
       referrerpolicy="no-referrer"
     ></script>
     <script src="script.js"></script>
+    <script src="components.js"></script>
+    <script>
+      const loadCards = () => {
+        addCard(
+          "#projects-container",
+          `bootstrap table to accordion`,
+          `Borne from the need to ~quickly~ add responsiveness to a legacy MVC application, I created this javascript library to convert bootstrap tables to accordions.
+          It probably needs a little cleanup but it worked to solve the problem at hand.`,
+          null,
+          getCardImages("a"),
+          null
+        );
+        addCard(
+          "#projects-container",
+          `Beyond the Paper`,
+          `A simple Restful api with some html, that allowed the user to input some pdf file, and email them out to different employees. This too was borne of necessity, as I assisted a friend in finding 
+          a solution to help email payslips to various employees. The challenge he faced was that his current system generated a huge pdf file, with payslips for all employees, so I had to
+          split the pdf and send them off to the individual employees.
+          `,
+          null,
+          getCardImages("a"),
+          null
+        );
+        addCard(
+          "#projects-container",
+          `WorkFlow Engine`,
+          `I'm noticing a trend, although this project isn't really in use. I created a workflow library (with some state machine functionality - lol couldn't decide what I wanted), in C#, that would 
+          allow a user to define the transitions of a record between states. It also allows the user to define triggers to run some actions (the state machine bit). All in all there's definitely some promise here`,
+          null,
+          getCardImages("a"),
+          null
+        );
+
+        addCard(
+          "#projects-container",
+          `TRex Clone`,
+          `Finally, a project not inspired by work. Was just messing around with MonoGame framework, and created a clone of the Trex game you see in Chrome (you know, when the net fails)`,
+          null,
+          getCardImages("a"),
+          null
+        );
+
+        addCard(
+          "#projects-container",
+          `Promotions 876`,
+          `A flutter project, back to work. I helped a friend refactor his flutter website, while adding some functionality for dynamically adding new content. There was a need
+          for the end user to be able to add new content (think blog posts but not really), without having to add new records to the database, new html files etc. A fun little exercise, and it definitely
+          increased my appreciation of Python`,
+          null,
+          getCardImages("a"),
+          null
+        );
+      };
+      const loadSkills = () => {
+        // Example usage:
+        const allSkills = [
+          { name: "C#", percentage: 85, icon: "assets/icons/c-sharp.png" },
+          {
+            name: ".Net Core",
+            percentage: 85,
+            icon: "assets/icons/asp.png",
+          },
+          { name: "React", percentage: 60, icon: "assets/icons/react.png" },
+          {
+            name: "TypeScript",
+            percentage: 40,
+            icon: "assets/icons/typescript.png",
+          },
+          { name: "HTML", percentage: 79, icon: "assets/icons/html.png" },
+          { name: "Python", percentage: 60, icon: "assets/icons/python.png" },
+          { name: "SQL", percentage: 75, doicon: "assets/icons/sql.png" },
+          {
+            name: "Azure Devops",
+            percentage: 40,
+            icon: "assets/icons/azure.png",
+          },
+        ];
+        runningProjects("#skills-container", allSkills);
+      };
+      $(document).ready(() => {
+        console.log("document ready");
+        jucktype(
+          "#type-text",
+          " A Software Engineer with 7 years of Experience."
+        );
+
+        loadCards();
+        loadSkills();
+        // function updateProgress(value) {
+        //   const progressBar = document.getElementById("progress-bar");
+        //   const progressValue = document.getElementById("progress-value");
+        //   value = Math.max(0, Math.min(100, value));
+        //   console.log("progressbar: ", progressBar);
+        //   progressBar.style.width = value + "%";
+        // }
+
+        // updateProgress(45); // Call this function with whatever your actual data value is
+      });
+    </script>
   </body>
 </html>
