fix: typo with the sql image property

--- a/index.html
+++ b/index.html
@@ -381,7 +381,7 @@
           },
           { name: "HTML", percentage: 79, icon: "assets/icons/html.png" },
           { name: "Python", percentage: 60, icon: "assets/icons/python.png" },
-          { name: "SQL", percentage: 75, doicon: "assets/icons/sql.png" },
+          { name: "SQL", percentage: 75, icon: "assets/icons/sql.png" },
           {
             name: "Azure Devops",
             percentage: 40,
